fixed overflow issue when sections are animated
fixed up some other minor details

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -6,7 +6,7 @@
   transition: height $duration, padding $duration, border $duration;
   position: fixed;
   top: 0;
-  padding: 10px;
+  padding: 0;
   z-index: 20;
   border-bottom: 1px solid rgba(0, 0, 0, 0);
 
