--- a/components/Intro/intro.module.scss
+++ b/components/Intro/intro.module.scss
@@ -48,6 +48,7 @@
     h1 {
       margin: 0;
       width: 100%;
+      text-align: center;
     }
   }
 }
